text overflow issue in chat fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,3 +119,23 @@ input:focus
 @import 'prism.css';
 
 @import 'tailwind.css';
+
+/* chat window text overflow */
+.text-message-w-control {
+    width: 60vw;
+}
+
+@media only screen and (max-width: 1920px) {
+}
+
+@media only screen and (max-width: 1366px) {
+    .text-message-w-control {
+        width: 55vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+}
+
+@media only screen and (max-width: 600px) {
+}
